R2DBC PostgreSQL Changelog
=============================

0.8.0.RELEASE
-----------------------------------------
* Fix instant handling #196
* Add an auth-config for local connections in testing #195
* Invalid listen example in README #192
* Add customizeSslContext(Consumer<SslContextBuilder>) #191
*  Default to scalar values for LOB column retrieval according to spec changes #190
* Upgrade to Testcontainers 1.12.3 #189
* SSL disabled exceptions not propagated in connect phase #187
* Enable BlobCodec and ClobCodec for binary usage #186
* Split unit test and integration test execution #185
* Cannot decode value of type java.net.InetAddress #184
* DB exceptions are not handled correctly by PostgresqlConnection for INSERT ... RETURNING in transaction #182
* Support unix domain socket connections #181
* Relax requirement for password #178
* Statement execution gets stuck when connection gets disconnected #177
* Add ConnectionFactory option for binaryTransfer (forceBinary) #160

0.8.0.RC2
------------------
* Revert reactor-netty exclusions #175
* Added documentation for options parameter in ConnectionConfiguration #174

0.8.0.RC1
------------------
* Upgrade to SCRAM Client 2.1 #171
* Add automatic module name #170
* Upgrade to Reactor Dysprosium GA #169
* Edit documentation #166
* Memory leak fixes #165
* Remove dependencies to Spring Boot #163
* Exclude not-required dependencies #162
* Implement JSON and JSONB codecs #161
* Allow type conversion across codecs #159
* Add JMH benchmarks and apply optimizations #158
* Fix memory leaks in BackendMessageEnvelopeDecoder #157
* Adapt to Row.get(int)/get(String) in PostgresqlRow #156
* Add binary codecs for BYTEA. #155
* Remove repositories declaration from published pom #154
* Fix of IllegalReferenceCountException on discardReadComponents call #153
* BackendMessageEnvelopeDecoder. fails with IllegalReferenceCountException: refCnt: 0 #151
* Expose Connection metadata #150
* Adapt to Statement.bind and Row.get by name #149